   * list->string now has an optional parameter: (list->string lst [adjustablep])
 * added seqref, seqset
   seqref is similar to CL elt, seqset is similar to CL (setf elt)
 * added the global variables @-, @+, @++, @+++, @*, @**, @***, @/, @//, @///
   to the environment inside the REPL.
   If you remove the leading @ then these work similar to Common Lisp's REPL variables.

 * mlib: added bit
 * mlib: added map, dovector, revappend, nreconc, nreverse, typecase
 * mlib: added generator related functions and macros
   * scan
   * scan-multiple, scan-concat
   * dogenerator
 * mlib: setf now supports strings, e.g.: (setf (char str) #\a)

 * fixed backquote expansion:
   e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
 * fixed compiled jmethod
 * fixed mlib: avoid possible stackoverflows when using larger sequences
   * mapcar, maplist, mapc, mapl, mapcan, mapcon
   * nconc, remove, remove-if, reduce
 * fixed mlib: fixed notevery, notany


Changes in JMurmel-1.2.2 relative to JMurmel-1.2.1

 * macroexpansion is no longer done on-the-fly but in a seperate macroexpansion phase.
   This fixes issues with macros being expanded that are actually defined later,
   or expanding the wrong version of a macro that is defined more than once.


Changes in JMurmel-1.2.1 relative to JMurmel-1.2

 * changed the interpreter to expand macros only once
 * changed the compiler so that the restriction "The list containing optional arguments cannot be used
   as an argument to `rplacd`." no longer exists

 * added the commandline argument --script, allow #!...!# as multiline comment to support hashbang scripts.
 * added --final-result and --no-final-result

 * fixed the compiler to tailcall-optimize let/let* dynamic


Changes in JMurmel-1.2 relative to JMurmel-1.1

 * changed/ fixed the behaviour around large numbers, no more silently cutting off decimal places
   when an integral number is needed