@@ -40,14 +40,6 @@ vielleicht doch in MurmelJavaProgram (nur intern) von t/nil auf true/false umste
 *command-line-argument-list* ablösen durch *argv* (plus evtl *argc*)?
 -> *command-line-argument-list* könnte in mlib umgesetzt werden
 
-eigentlich sollte LambdaJSymbol ein attribut haben interned/uninterned
--> gensym sollte namen im sinne g123 vergeben, nicht #:g123
-   LabmdaJSymbol.printSEx() sollte bei "escapeAtoms=true" bei uninterned "#:" voranstellen
-   es sollte ein readermacro #: geben, das das folgende als uninterned symbol einliest
--> vielleicht LambdaJSymbol.wellknown missbrauchen: statt WellknownSymbol.none -> interned und notinterned
--> gensym brauchts eigentlich nicht in Murmel, kann man mit make-symbol implementieren
--> gensym: optionalen string parameter für den namen, default ist "gensym"
-
 
 im else zweig kann man nil weglassen. sollte man auch weglassen weil sonst gibts umsonst den environment lookup von nil
 -> oder in expand wegoptimieren
